--- a/host/apps/DeveloperStudio/qml-dev-studio.qrc
+++ b/host/apps/DeveloperStudio/qml-dev-studio.qrc
@@ -151,5 +151,8 @@
         <file>partial-views/control-view-creator/Editor/UnsupportedFileType.qml</file>
         <file>partial-views/control-view-creator/navigation/SGSideNavItem.qml</file>
         <file>partial-views/control-view-creator/navigation/SideNavFooter.qml</file>
+        <file>partial-views/control-view-creator/Sidebar/SideBarDelegate.qml</file>
+        <file>partial-views/control-view-creator/Sidebar/FileContextMenu.qml</file>
+        <file>partial-views/control-view-creator/Sidebar/FolderContextMenu.qml</file>
     </qresource>
 </RCC>
