SDS: Added recently released qml file

--- a/host/apps/DeveloperStudio/qml-dev-studio.qrc
+++ b/host/apps/DeveloperStudio/qml-dev-studio.qrc
@@ -96,5 +96,6 @@
         <file>partial-views/general/SGNotificationToast.qml</file>
         <file>partial-views/status-bar/SGSettingsPopup.qml</file>
         <file>partial-views/status-bar/SGSettingsCheckbox.qml</file>
+        <file>partial-views/platform-selector/RecentlyReleased.qml</file>
     </qresource>
 </RCC>
