--- a/host/components/views/level-translators/qml-views-level-translators.qrc
+++ b/host/components/views/level-translators/qml-views-level-translators.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/views/level-translators">
+    <qresource prefix="/">
         <file>Control.qml</file>
         <file>control-views/BasicControl.qml</file>
         <file>control-views/PlatformInterface.qml</file>
