--- a/host/components/common/qml/tech/strata/common/qml.qrc
+++ b/host/components/common/qml/tech/strata/common/qml.qrc
@@ -1,7 +1,7 @@
-<!DOCTYPE RCC><RCC version="1.0">
+<RCC>
     <qresource prefix="/tech/strata/common">
         <file>qmldir</file>
         <file>Logger.qml</file>
-        <file>PlatformInterface.qml</file>
+        <file>PlatformInterfaceBase.qml</file>
     </qresource>
 </RCC>
