--- a/host/components/views/template/qml-views-template.qrc
+++ b/host/components/views/template/qml-views-template.qrc
@@ -4,7 +4,8 @@
         <file>control-views/AdvancedControl.qml</file>
         <file>control-views/BasicControl.qml</file>
         <file>control-views/DebugMenu.qml</file>
-        <file>control-views/PlatformInterface.qml</file>
         <file>control-views/UserSettingsControl.qml</file>
+        <file>control-views/template.json</file>
+        <file>control-views/PlatformInterface.qml</file>
     </qresource>
 </RCC>
