Started basic layout for creator

--- a/host/apps/PlatformInterfaceGenerator/qml.qrc
+++ b/host/apps/PlatformInterfaceGenerator/qml.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>JsonImporter.qml</file>
+        <file>PlatformInterfaceCreator.qml</file>
     </qresource>
 </RCC>
