Commands and notifications are now separated
There is now only one model for both

--- a/host/apps/PlatformInterfaceGenerator/qml.qrc
+++ b/host/apps/PlatformInterfaceGenerator/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>JsonImporter.qml</file>
         <file>PlatformInterfaceCreator.qml</file>
+        <file>AlertToast.qml</file>
     </qresource>
 </RCC>
