--- a/host/apps/WidgetGallery/qml.qrc
+++ b/host/apps/WidgetGallery/qml.qrc
@@ -23,5 +23,7 @@
         <file>widgets1_0/ExSGRGBSlider.qml</file>
         <file>widgets1_0/ExSGAlignedLabel.qml</file>
         <file>widgets1_0/ExSGMqttClient.qml</file>
+        <file>widgets1_0/ExSGUserSetting.qml</file>
+        <file>widgets1_0/navigation_control.js</file>
     </qresource>
 </RCC>
