--- a/host/apps/DeveloperStudio/qml-dev-studio.qrc
+++ b/host/apps/DeveloperStudio/qml-dev-studio.qrc
@@ -158,5 +158,6 @@
         <file>partial-views/platform-selector/PlatformImage.qml</file>
         <file>partial-views/general/WebPopup/SGWebControls.qml</file>
         <file>partial-views/general/WebPopup/SGWebView.qml</file>
+        <file>partial-views/control-view-creator/Console/ConsoleContainer.qml</file>
     </qresource>
 </RCC>
