Added a debugging bar

--- a/host/components/sgwidgets/qml/tech/strata/sgwidgets/images/qml.qrc
+++ b/host/components/sgwidgets/qml/tech/strata/sgwidgets/images/qml.qrc
@@ -54,5 +54,6 @@
         <file>folder-plus.svg</file>
         <file>redo.svg</file>
         <file>undo.svg</file>
+        <file>coding.svg</file>
     </qresource>
 </RCC>
