CVC: Moved all files out of normal QRC to split between debug/release qrcs, some additional cleanup

--- a/host/apps/DeveloperStudio/qml-dev-studio-release.qrc
+++ b/host/apps/DeveloperStudio/qml-dev-studio-release.qrc
@@ -2,4 +2,8 @@
     <qresource prefix="/partial-views/debug-bar">
         <file alias="SGDebugBar.qml">partial-views/debug-bar/SGDebugBarFake.qml</file>
     </qresource>
+    <qresource prefix="/partial-views/control-view-creator">
+        <file alias="ControlViewCreator.qml">partial-views/control-view-creator/ControlViewCreatorFake.qml</file>
+        <file alias="CVCButton.qml">partial-views/control-view-creator/CVCButtonFake.qml</file>
+    </qresource>
 </RCC>
