PIG: Added support for payload properties of type 'object' in GUI

--- a/host/apps/PlatformInterfaceGenerator/qml.qrc
+++ b/host/apps/PlatformInterfaceGenerator/qml.qrc
@@ -6,5 +6,7 @@
         <file>AlertToast.qml</file>
         <file>PayloadPropertyDelegate.qml</file>
         <file>CommandNotificationDelegate.qml</file>
+        <file>PayloadObjectPropertyDelegate.qml</file>
+        <file>PayloadArrayPropertyDelegate.qml</file>
     </qresource>
 </RCC>
