--- a/host/components/sgwidgets/qml/tech/strata/sgwidgets/images/qml.qrc
+++ b/host/components/sgwidgets/qml/tech/strata/sgwidgets/images/qml.qrc
@@ -55,5 +55,6 @@
         <file>redo.svg</file>
         <file>undo.svg</file>
         <file>coding.svg</file>
+        <file>minus.svg</file>
     </qresource>
 </RCC>
