PIG: Added support for nested objects and arrays in GUI

--- a/host/apps/PlatformInterfaceGenerator/qml.qrc
+++ b/host/apps/PlatformInterfaceGenerator/qml.qrc
@@ -8,5 +8,6 @@
         <file>CommandNotificationDelegate.qml</file>
         <file>PayloadObjectPropertyDelegate.qml</file>
         <file>PayloadArrayPropertyDelegate.qml</file>
+        <file>TypeSelectorComboBox.qml</file>
     </qresource>
 </RCC>
