SDS: Added context to control view dev container
This allows the dev control view to communicate with a connected platform

--- a/host/apps/DeveloperStudio/qml-dev-studio-debug.qrc
+++ b/host/apps/DeveloperStudio/qml-dev-studio-debug.qrc
@@ -8,6 +8,7 @@
         <file alias="SGQmlErrorListViewDelegate.qml">partial-views/debug-bar/SGQmlErrorListViewDelegate.qml</file>
         <file alias="SGQmlErrorListButton.qml">partial-views/debug-bar/SGQmlErrorListButton.qml</file>
         <file alias="SGControlViewDevPopup.qml">partial-views/debug-bar/SGControlViewDevPopup.qml</file>
+        <file>ControlViewDevContainer.qml</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
