WidgetGallery: add SGSpinBox example int SGWidgets 1.0

--- a/host/apps/WidgetGallery/qml.qrc
+++ b/host/apps/WidgetGallery/qml.qrc
@@ -24,5 +24,6 @@
         <file>widgets1_0/ExSGAlignedLabel.qml</file>
         <file>widgets1_0/ExSGMqttClient.qml</file>
         <file>widgets1_0/ExSGUserSettings.qml</file>
+        <file>widgets1_0/ExSGSpinBox.qml</file>
     </qresource>
 </RCC>
