Added central Theme.qml
This can be imported into QML via tech.strata.theme 1.0

--- a/host/components/theme/qml/tech/strata/theme/qml.qrc
+++ b/host/components/theme/qml/tech/strata/theme/qml.qrc
@@ -1,8 +1,6 @@
-<!DOCTYPE RCC><RCC version="1.0">
+<RCC>
     <qresource prefix="/tech/strata/theme">
         <file>Theme.qml</file>
         <file>qmldir</file>
-        <file>+mac/Theme.qml</file>
-        <file>+mac/qmldir</file>
     </qresource>
 </RCC>
