Added our main Strata theme and a secondary Tango theme

--- a/host/components/theme/qml/tech/strata/theme/qml.qrc
+++ b/host/components/theme/qml/tech/strata/theme/qml.qrc
@@ -2,5 +2,8 @@
     <qresource prefix="/tech/strata/theme">
         <file>Theme.qml</file>
         <file>qmldir</file>
+        <file>TangoTheme.qml</file>
+        <file>palettes/StrataPalette.qml</file>
+        <file>palettes/TangoPalette.qml</file>
     </qresource>
 </RCC>
