--- a/host/apps/DeveloperStudio/qml-dev-studio-debug.qrc
+++ b/host/apps/DeveloperStudio/qml-dev-studio-debug.qrc
@@ -78,5 +78,10 @@
         <file>partial-views/control-view-creator/Console/ConsoleLogger.qml</file>
         <file>partial-views/control-view-creator/Console/ConsoleContainer.qml</file>
         <file>partial-views/control-view-creator/components/SGControlViewButton.qml</file>
+        <file>partial-views/control-view-creator/Console/ConsoleMessages/ConsoleDelegate.qml</file>
+        <file>partial-views/control-view-creator/Console/ConsoleMessages/ConsoleMessage.qml</file>
+        <file>partial-views/control-view-creator/Console/ConsoleMessages/ConsoleTime.qml</file>
+        <file>partial-views/control-view-creator/Console/ConsoleMessages/ConsoleTypes.qml</file>
+        <file>partial-views/control-view-creator/components/SGControlViewIconButton.qml</file>
     </qresource>
 </RCC>
