SDS Notifications: Added a framework for adding notifications in strata

--- a/host/apps/DeveloperStudio/qml-dev-studio.qrc
+++ b/host/apps/DeveloperStudio/qml-dev-studio.qrc
@@ -98,5 +98,9 @@
         <file>partial-views/platform-selector/PlatformImage.qml</file>
         <file>partial-views/general/WebPopup/SGWebControls.qml</file>
         <file>partial-views/general/WebPopup/SGWebView.qml</file>
+        <file>partial-views/notifications/NotificationDelegate.qml</file>
+        <file>partial-views/notifications/Notifications.qml</file>
+        <file>partial-views/notifications/NotificationsBox.qml</file>
+        <file>partial-views/notifications/qmldir</file>
     </qresource>
 </RCC>
