moved help to a new file

--- a/host/components/common/qml/tech/strata/common/ContentView/qml-views-common-content.qrc
+++ b/host/components/common/qml/tech/strata/common/ContentView/qml-views-common-content.qrc
@@ -11,5 +11,7 @@
         <file>images/docLoading.gif</file>
         <file>images/angle-right-solid.svg</file>
         <file>content-views/EmptyDocuments.qml</file>
+        <file>HelpButton.qml</file>
     </qresource>
+    <qresource prefix="/"/>
 </RCC>
