--- a/host/apps/DeveloperStudio/qml-dev-studio-debug.qrc
+++ b/host/apps/DeveloperStudio/qml-dev-studio-debug.qrc
@@ -83,5 +83,6 @@
         <file>partial-views/control-view-creator/Console/ConsoleMessages/ConsoleTime.qml</file>
         <file>partial-views/control-view-creator/Console/ConsoleMessages/ConsoleTypes.qml</file>
         <file>partial-views/control-view-creator/components/SGControlViewIconButton.qml</file>
+        <file>partial-views/control-view-creator/components/SGControlSearchComboBox.qml</file>
     </qresource>
 </RCC>
