--- a/host/apps/PlatformInterfaceGenerator/qml.qrc
+++ b/host/apps/PlatformInterfaceGenerator/qml.qrc
@@ -9,5 +9,6 @@
         <file>PayloadObjectPropertyDelegate.qml</file>
         <file>PayloadArrayPropertyDelegate.qml</file>
         <file>TypeSelectorComboBox.qml</file>
+        <file>images/PIGIcon.svg</file>
     </qresource>
 </RCC>
