--- a/host/components/common/qml/tech/strata/common/ContentView/qml-views-common-content.qrc
+++ b/host/components/common/qml/tech/strata/common/ContentView/qml-views-common-content.qrc
@@ -12,7 +12,7 @@
         <file>images/angle-right-solid.svg</file>
         <file>content-views/EmptyDocuments.qml</file>
         <file>HelpButton.qml</file>
-        <file>images/HelpFakeDocument.pdf</file>
+        <file>images/HelpTourDocument.pdf</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
