--- a/host/apps/DeveloperStudio/partial-views/control-view-creator/template-views.qrc
+++ b/host/apps/DeveloperStudio/partial-views/control-view-creator/template-views.qrc
@@ -14,4 +14,7 @@
         <file>template-views/images/basic.jpg</file>
         <file>template-views/images/template.jpg</file>
     </qresource>
+    <qresource prefix="/">
+        <file>Editor/textEditorHelper.js</file>
+    </qresource>
 </RCC>
