testing the encodeURIComponent portion

--- a/host/apps/DeveloperStudio/partial-views/control-view-creator/template-views.qrc
+++ b/host/apps/DeveloperStudio/partial-views/control-view-creator/template-views.qrc
@@ -14,7 +14,5 @@
         <file>template-views/images/basic.jpg</file>
         <file>template-views/images/template.jpg</file>
     </qresource>
-    <qresource prefix="/">
-        <file>Editor/textEditorHelper.js</file>
-    </qresource>
+    <qresource prefix="/"/>
 </RCC>
