Fixes to collateral change UX + notifications

--- a/host/components/common/qml/tech/strata/common/ContentView/qml-views-common-content.qrc
+++ b/host/components/common/qml/tech/strata/common/ContentView/qml-views-common-content.qrc
@@ -13,5 +13,6 @@
         <file>content-views/EmptyDocuments.qml</file>
         <file>HelpButton.qml</file>
         <file>images/HelpTourDocument.pdf</file>
+        <file>DocumentsHistory.qml</file>
     </qresource>
 </RCC>
