added new images for icon and updated the notification input value

--- a/host/components/views/template/qml-views-template.qrc
+++ b/host/components/views/template/qml-views-template.qrc
@@ -7,5 +7,7 @@
         <file>control-views/PlatformInterface.qml</file>
         <file>control-views/images/commandicon.png</file>
         <file>control-views/images/notificationicon.png</file>
+        <file>control-views/images/BoardToStrata.png</file>
+        <file>control-views/images/StrataToBoard.png</file>
     </qresource>
 </RCC>
