extracted the large qtQuick variables out of the editor.html

--- a/host/apps/DeveloperStudio/qml-dev-studio-debug.qrc
+++ b/host/apps/DeveloperStudio/qml-dev-studio-debug.qrc
@@ -85,5 +85,6 @@
         <file>partial-views/control-view-creator/components/SGControlViewIconButton.qml</file>
         <file>partial-views/control-view-creator/components/SGControlSearchComboBox.qml</file>
         <file>partial-views/control-view-creator/DebugPanel.qml</file>
+        <file>partial-views/control-view-creator/qtQuick.js</file>
     </qresource>
 </RCC>
