Notifications: re-use the same notification design in both inbox and popups

--- a/host/apps/DeveloperStudio/qml-dev-studio.qrc
+++ b/host/apps/DeveloperStudio/qml-dev-studio.qrc
@@ -103,5 +103,6 @@
         <file>partial-views/notifications/NotificationsContainer.qml</file>
         <file>partial-views/notifications/NotificationsInbox.qml</file>
         <file>partial-views/notifications/NotificationsInboxDelegate.qml</file>
+        <file>partial-views/notifications/NotificationContent.qml</file>
     </qresource>
 </RCC>
