--- a/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
+++ b/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
@@ -9,6 +9,7 @@
         <file>SGCapacityBarElement.qml</file>
         <file>SGCheckBox.qml</file>
         <file>SGCircularGauge.qml</file>
+        <file>SGCircularProgress.qml</file>
         <file>SGComboBox.qml</file>
         <file>SGFileSelector.qml</file>
         <file>SGGraph.qml</file>
