Widget Gallery: example of SGCircularProgress

--- a/host/apps/WidgetGallery/qml.qrc
+++ b/host/apps/WidgetGallery/qml.qrc
@@ -25,5 +25,6 @@
         <file>widgets1_0/ExSGMqttClient.qml</file>
         <file>widgets1_0/ExSGUserSettings.qml</file>
         <file>widgets1_0/ExSGSpinBox.qml</file>
+        <file>widgets1_0/ExSGCircularProgress.qml</file>
     </qresource>
 </RCC>
