--- a/host/components/views/template/qml-views-template.qrc
+++ b/host/components/views/template/qml-views-template.qrc
@@ -7,6 +7,6 @@
         <file>control-views/PlatformInterface.qml</file>
         <file>control-views/images/BoardToStrata.png</file>
         <file>control-views/images/StrataToBoard.png</file>
-        <file>control-views/DebugMenu.qml</file>
+        <file>control-views/DebugNotifMenu.qml</file>
     </qresource>
 </RCC>
