change design of context menu in SCI

--- a/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
+++ b/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
@@ -10,6 +10,7 @@
         <file>SGCheckBox.qml</file>
         <file>SGCircularGauge.qml</file>
         <file>SGComboBox.qml</file>
+        <file>SGContextMenu.qml</file>
         <file>SGFileSelector.qml</file>
         <file>SGGraph.qml</file>
         <file>SGHueSlider.qml</file>
