--- a/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
+++ b/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
@@ -11,6 +11,7 @@
         <file>SGCircularGauge.qml</file>
         <file>SGComboBox.qml</file>
         <file>SGContextMenu.qml</file>
+        <file>SGContextMenuEdit.qml</file>
         <file>SGFileSelector.qml</file>
         <file>SGGraph.qml</file>
         <file>SGHueSlider.qml</file>
