--- a/host/components/common/qml/tech/strata/common/ContentView/qml-views-common-content.qrc
+++ b/host/components/common/qml/tech/strata/common/ContentView/qml-views-common-content.qrc
@@ -14,5 +14,6 @@
         <file>HelpButton.qml</file>
         <file>images/HelpTourDocument.pdf</file>
         <file>DocumentsHistory.qml</file>
+        <file>content-views/HistoryStatus.qml</file>
     </qresource>
 </RCC>
