Worked on suggested fixes from David, Still have x and y issues

--- a/host/apps/DeveloperStudio/qml-dev-studio.qrc
+++ b/host/apps/DeveloperStudio/qml-dev-studio.qrc
@@ -107,5 +107,6 @@
         <file>partial-views/notifications/NotificationsInboxDelegate.qml</file>
         <file>partial-views/notifications/NotificationContent.qml</file>
         <file>partial-views/control-view-creator/CVCLoader.qml</file>
+        <file>partial-views/help-tour/SGToolTipPopup.qml</file>
     </qresource>
 </RCC>
