--- a/host/apps/DeveloperStudio/partial-views/control-view-creator/template-views.qrc
+++ b/host/apps/DeveloperStudio/partial-views/control-view-creator/template-views.qrc
@@ -8,11 +8,14 @@
         <file>template-views/template/qml-views-template.qrc</file>
         <file>template-views/template/control-views/AdvancedControl.qml</file>
         <file>template-views/template/control-views/BasicControl.qml</file>
-        <file>template-views/template/control-views/DebugMenu.qml</file>
-        <file>template-views/template/control-views/PlatformInterface.qml</file>
-        <file>template-views/template/control-views/UserSettingsControl.qml</file>
         <file>template-views/images/basic.jpg</file>
         <file>template-views/images/template.jpg</file>
+        <file>template-views/template/control-views/images/StrataToBoard.png</file>
+        <file>template-views/template/control-views/images/BoardToStrata.png</file>
+        <file>template-views/template/control-views/DebugNotifMenu.qml</file>
+        <file>template-views/template/control-views/DebugMenu.qml</file>
+        <file>template-views/template/control-views/platformInterface.json</file>
+        <file>template-views/template/control-views/PlatformInterface.qml</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
