--- a/host/apps/DeveloperStudio/partial-views/control-view-creator/template-views/template/qml-views-template.qrc
+++ b/host/apps/DeveloperStudio/partial-views/control-view-creator/template-views/template/qml-views-template.qrc
@@ -5,6 +5,7 @@
         <file>control-views/BasicControl.qml</file>
         <file>control-views/DebugMenu.qml</file>
         <file>control-views/PlatformInterface.qml</file>
-        <file>control-views/UserSettingsControl.qml</file>
+        <file>control-views/images/StrataToBoard.png</file>
+        <file>control-views/images/BoardToStrata.png</file>
     </qresource>
 </RCC>
