added cmakelist.txt in basic template

--- a/host/apps/DeveloperStudio/partial-views/control-view-creator/template-views.qrc
+++ b/host/apps/DeveloperStudio/partial-views/control-view-creator/template-views.qrc
@@ -15,6 +15,8 @@
         <file>template-views/template/control-views/DebugMenu.qml</file>
         <file>template-views/template/control-views/platformInterface.json</file>
         <file>template-views/template/control-views/PlatformInterface.qml</file>
+        <file>template-views/basic/DebugMenu.qml</file>
+        <file>template-views/basic/CMakeLists.txt</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
