--- a/host/apps/DeveloperStudio/partial-views/control-view-creator/template-views.qrc
+++ b/host/apps/DeveloperStudio/partial-views/control-view-creator/template-views.qrc
@@ -17,6 +17,7 @@
         <file>template-views/template/control-views/PlatformInterface.qml</file>
         <file>template-views/basic/DebugMenu.qml</file>
         <file>template-views/basic/CMakeLists.txt</file>
+        <file>template-views/basic/platformInterface.json</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
