--- a/host/apps/DeveloperStudio/partial-views/control-view-creator/template-views/basic/qml.qrc
+++ b/host/apps/DeveloperStudio/partial-views/control-view-creator/template-views/basic/qml.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file>Control.qml</file>
         <file>PlatformInterface.qml</file>
+        <file>platformInterface.json</file>
+        <file>DebugMenu.qml</file>
     </qresource>
 </RCC>
