--- a/host/apps/DeveloperStudio/qml-dev-studio-debug.qrc
+++ b/host/apps/DeveloperStudio/qml-dev-studio-debug.qrc
@@ -26,6 +26,7 @@
         <file>partial-views/control-view-creator/Sidebar/FileContextMenu.qml</file>
         <file>partial-views/control-view-creator/Sidebar/FolderContextMenu.qml</file>
         <file>partial-views/control-view-creator/ConfirmClosePopup.qml</file>
+        <file>partial-views/control-view-creator/OverwriteProjectPopup.qml</file>
         <file>partial-views/control-view-creator/utils/template_selection.js</file>
         <file>partial-views/control-view-creator/components/SGControlViewButton.qml</file>
         <file>partial-views/control-view-creator/CVCButton.qml</file>
