added log level selector and reset window size button to SCI settings menu

--- a/host/apps/SerialConsoleInterface/qml.qrc
+++ b/host/apps/SerialConsoleInterface/qml.qrc
@@ -9,6 +9,7 @@
         <file>PlatformInfoWindow.qml</file>
         <file>SciAboutWindow.qml</file>
         <file>SciSettingsDialog.qml</file>
+        <file>SciLogLevelSelector.qml</file>
         <file>VerticalDivider.qml</file>
         <file>ProgramDeviceView.qml</file>
         <file>StatusNode.qml</file>
