--- a/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
+++ b/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
@@ -18,6 +18,7 @@
         <file>SGIcon.qml</file>
         <file>SGIconButton.qml</file>
         <file>SGInfoBox.qml</file>
+        <file>SGLogLevelSelector.qml</file>
         <file>SGMainWindow.qml</file>
         <file>SGMarkdownViewer/SGMarkdownViewer.qml</file>
         <file>SGMarkdownViewer/index.html</file>
