PRT: json schemas for embedded, assisted and controller class_id documents

--- a/host/apps/PlatformRegistrationTool/qml.qrc
+++ b/host/apps/PlatformRegistrationTool/qml.qrc
@@ -14,5 +14,6 @@
         <file>WorkflowNode.qml</file>
         <file>WorkflowNodeText.qml</file>
         <file>images/jlink-connect-schema.svg</file>
+        <file>jsonSchemas.js</file>
     </qresource>
 </RCC>
