--- a/host/apps/PlatformRegistrationTool/qml.qrc
+++ b/host/apps/PlatformRegistrationTool/qml.qrc
@@ -16,7 +16,7 @@
         <file>CanvasShapes.js</file>
         <file>FeedbackArrow.qml</file>
         <file>Arrow.qml</file>
-        <file>Workflow.qml</file>
+        <file>ProgramWorkflow.qml</file>
         <file>WorkflowNode.qml</file>
         <file>WorkflowNodeText.qml</file>
         <file>images/jlink-connect-schema.svg</file>
