Started on CS-1657

--- a/host/components/monaco/qml/tech/strata/monaco/qml.qrc
+++ b/host/components/monaco/qml/tech/strata/monaco/qml.qrc
@@ -45,5 +45,6 @@
         <file>minified/min-maps/vs/loader.js.map</file>
         <file>minified/monaco.d.ts</file>
         <file>minified/qtQuick.js</file>
+        <file>minified/qtQuickTypes.js</file>
     </qresource>
 </RCC>
