Use simple SGTextInput widget to simplify CVC context menu code in SDS

--- a/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
+++ b/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
@@ -46,6 +46,7 @@
         <file>SGTextArea.qml</file>
         <file>SGTextEdit.qml</file>
         <file>SGTextField.qml</file>
+        <file>SGTextInput.qml</file>
         <file>SGWindow.qml</file>
         <file>utils/SGUtils.js</file>
         <file>editors/SGBaseEditor.qml</file>
