--- a/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
+++ b/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
@@ -64,5 +64,7 @@
         <file>cvc-layout/widgets/Divider/Divider.txt</file>
         <file>cvc-layout/widgets/Text/LayoutText.qml</file>
         <file>cvc-layout/widgets/Text/Text.txt</file>
+        <file>cvc-layout/widgets/SGIcon/LayoutSGIcon.qml</file>
+        <file>cvc-layout/widgets/SGIcon/SGIcon.txt</file>
     </qresource>
 </RCC>
