CVC Visual Editor: added rectangle, made sgicon clickable

--- a/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
+++ b/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
@@ -66,5 +66,7 @@
         <file>cvc-layout/widgets/Text/Text.txt</file>
         <file>cvc-layout/widgets/SGIcon/LayoutSGIcon.qml</file>
         <file>cvc-layout/widgets/SGIcon/SGIcon.txt</file>
+        <file>cvc-layout/widgets/Rectangle/LayoutRectangle.qml</file>
+        <file>cvc-layout/widgets/Rectangle/Rectangle.txt</file>
     </qresource>
 </RCC>
