--- a/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
+++ b/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
@@ -12,7 +12,7 @@
         <file>SGCircularGauge.qml</file>
         <file>SGComboBox.qml</file>
         <file>SGContextMenuEditActions.qml</file>
-        <file>SGFileSelector.qml</file>
+        <file>SGFilePicker.qml</file>
         <file>SGGraph.qml</file>
         <file>SGHueSlider.qml</file>
         <file>SGIcon.qml</file>
