--- a/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
+++ b/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
@@ -72,5 +72,7 @@
         <file>cvc-layout/widgets/Switch/SGSwitch.txt</file>
         <file>cvc-layout/widgets/InfoBox/SGInfoBox.txt</file>
         <file>cvc-layout/widgets/InfoBox/LayoutSGInfoBox.qml</file>
+        <file>cvc-layout/widgets/SubmitInfoBox/LayoutSGSubmitInfoBox.qml</file>
+        <file>cvc-layout/widgets/SubmitInfoBox/SGSubmitInfoBox.txt</file>
     </qresource>
 </RCC>
