circular gauge added

--- a/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
+++ b/host/components/sgwidgets/qml/tech/strata/sgwidgets.1.0/qml.qrc
@@ -74,5 +74,7 @@
         <file>cvc-layout/widgets/InfoBox/LayoutSGInfoBox.qml</file>
         <file>cvc-layout/widgets/SubmitInfoBox/LayoutSGSubmitInfoBox.qml</file>
         <file>cvc-layout/widgets/SubmitInfoBox/SGSubmitInfoBox.txt</file>
+        <file>cvc-layout/widgets/CircularGauge/LayoutSGCircularGauge.qml</file>
+        <file>cvc-layout/widgets/CircularGauge/SGCircularGauge.txt</file>
     </qresource>
 </RCC>
