--- a/apps/PlatformRegistrationTool/qml.qrc
+++ b/apps/PlatformRegistrationTool/qml.qrc
@@ -6,6 +6,7 @@
         <file>LoginScreen.qml</file>
         <file>PrtAboutWindow.qml</file>
         <file>ProgramDeviceWizard.qml</file>
+        <file>BaseStateMachine.qml</file>
         <file>AssistedModeStateMachine.qml</file>
         <file>EmbeddedModeStateMachine.qml</file>
         <file>ControllerModeStateMachine.qml</file>
