--- a/apps/DeveloperStudio/qml-dev-studio-plugin-cvc.qrc
+++ b/apps/DeveloperStudio/qml-dev-studio-plugin-cvc.qrc
@@ -31,4 +31,7 @@
         <file alias="components/SGControlSearchComboBox.qml">partial-views/control-view-creator/components/SGControlSearchComboBox.qml</file>
         <file alias="DebugPanel.qml">partial-views/control-view-creator/DebugPanel.qml</file>
     </qresource>
+    <qresource prefix="/">
+        <file>partial-views/control-view-creator/ViewConsoleContainer.qml</file>
+    </qresource>
 </RCC>
