--- a/apps/SerialConsoleInterface/images/images.qrc
+++ b/apps/SerialConsoleInterface/images/images.qrc
@@ -7,5 +7,8 @@
         <file>list-expand.svg</file>
         <file>list-collapse.svg</file>
         <file>sci-logo.svg</file>
+        <file>return.svg</file>
+        <file>question.svg</file>
+        <file>hex-view.svg</file>
     </qresource>
 </RCC>
