--- a/apps/SerialConsoleInterface/qml.qrc
+++ b/apps/SerialConsoleInterface/qml.qrc
@@ -16,5 +16,6 @@
         <file>ScrollbackView.qml</file>
         <file>MessageEditor.qml</file>
         <file>HexView.qml</file>
+        <file>SciConnectMockDeviceDialog.qml</file>
     </qresource>
 </RCC>
