--- a/apps/DeveloperStudio/qml-dev-studio-plugin-cvc.qrc
+++ b/apps/DeveloperStudio/qml-dev-studio-plugin-cvc.qrc
@@ -48,6 +48,7 @@
         <file alias="Editor/VisualEditor/LayoutOverlay/TypeContextMenus/SGGraphContextMenu.qml">partial-views/control-view-creator/Editor/VisualEditor/LayoutOverlay/TypeContextMenus/SGGraphContextMenu.qml</file>
 	<file alias="Editor/VisualEditor/LayoutOverlay/TypeContextMenus/SGTextContextMenu.qml">partial-views/control-view-creator/Editor/VisualEditor/LayoutOverlay/TypeContextMenus/SGTextContextMenu.qml</file>
 	<file alias="Editor/VisualEditor/LayoutOverlay/TypeContextMenus/SGInfoBoxContextMenu.qml">partial-views/control-view-creator/Editor/VisualEditor/LayoutOverlay/TypeContextMenus/SGInfoBoxContextMenu.qml</file>
+        <file alias="Editor/VisualEditor/LayoutOverlay/TypeContextMenus/SGGaugeContextMenu.qml">partial-views/control-view-creator/Editor/VisualEditor/LayoutOverlay/TypeContextMenus/SGGaugeContextMenu.qml</file>
         <file alias="Editor/VisualEditor/LayoutOverlay/LayoutPopupContext/ColorPopup.qml">partial-views/control-view-creator/Editor/VisualEditor/LayoutOverlay/LayoutPopupContext/ColorPopup.qml</file>
 	<file alias="Editor/VisualEditor/LayoutOverlay/LayoutPopupContext/TextPopup.qml">partial-views/control-view-creator/Editor/VisualEditor/LayoutOverlay/LayoutPopupContext/TextPopup.qml</file>
 	<file alias="Editor/VisualEditor/LayoutOverlay/LayoutPopupContext/ComboBoxPopup.qml">partial-views/control-view-creator/Editor/VisualEditor/LayoutOverlay/LayoutPopupContext/ComboBoxPopup.qml</file>
