--- a/components/sgwidgets/qml/tech/strata/sgwidgets/images/qml.qrc
+++ b/components/sgwidgets/qml/tech/strata/sgwidgets/images/qml.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/sgimages">
         <file>arrow-list-bottom.svg</file>
         <file>ban.svg</file>
+        <file>bluetooth.svg</file>
         <file>bolt.svg</file>
         <file>bookmark-blank.svg</file>
         <file>bookmark.svg</file>
@@ -26,6 +27,7 @@
         <file>folder-open.svg</file>
         <file>funnel.svg</file>
         <file>info-circle.svg</file>
+        <file>link.svg</file>
         <file>plug.svg</file>
         <file>plus.svg</file>
         <file>question-circle.svg</file>
@@ -37,6 +39,7 @@
         <file>strata-logo.svg</file>
         <file>times.svg</file>
         <file>times-circle.svg</file>
+        <file>sync.svg</file>
         <file>tools.svg</file>
         <file>user.svg</file>
         <file>on-logo-green.svg</file>
