--- a/apps/SerialConsoleInterface/qml.qrc
+++ b/apps/SerialConsoleInterface/qml.qrc
@@ -17,5 +17,6 @@
         <file>MessageEditor.qml</file>
         <file>HexView.qml</file>
         <file>SciConnectMockDeviceDialog.qml</file>
+        <file>ConnectBleDeviceDialog.qml</file>
     </qresource>
 </RCC>
