Visual Editor: context menu updates
- Set original color when using ColorPopup
- Removed validators for some cases where they are not needed
- Escaped quotes in submitted strings
- Added mustNotBeEmpty property to TextPopup
- Moved popup common code to GenericPopup
- Removed extra regexpValidator from TextPopup
- Alphabetized "add" menu
- Changed verbiage, spelling corrections
- added spacing to SGInfoBox.qml

--- a/apps/DeveloperStudio/qml-dev-studio-plugin-cvc.qrc
+++ b/apps/DeveloperStudio/qml-dev-studio-plugin-cvc.qrc
@@ -65,5 +65,6 @@
         <file alias="PlatformInterfaceGenerator/PayloadObjectPropertyDelegate.qml">partial-views/control-view-creator/PlatformInterfaceGenerator/PayloadObjectPropertyDelegate.qml</file>
         <file alias="PlatformInterfaceGenerator/PayloadPropertyDelegate.qml">partial-views/control-view-creator/PlatformInterfaceGenerator/PayloadPropertyDelegate.qml</file>
         <file alias="PlatformInterfaceGenerator/TypeSelectorComboBox.qml">partial-views/control-view-creator/PlatformInterfaceGenerator/TypeSelectorComboBox.qml</file>
+        <file alias="Editor/VisualEditor/LayoutOverlay/LayoutPopupContext/GenericPopup.qml">partial-views/control-view-creator/Editor/VisualEditor/LayoutOverlay/LayoutPopupContext/GenericPopup.qml</file>
     </qresource>
 </RCC>
