--- a/apps/DeveloperStudio/qml-dev-studio-plugin-cvc.qrc
+++ b/apps/DeveloperStudio/qml-dev-studio-plugin-cvc.qrc
@@ -20,6 +20,7 @@
         <file alias="Sidebar/SideBarDelegate.qml">partial-views/control-view-creator/Sidebar/SideBarDelegate.qml</file>
         <file alias="Sidebar/FileContextMenu.qml">partial-views/control-view-creator/Sidebar/FileContextMenu.qml</file>
         <file alias="Sidebar/FolderContextMenu.qml">partial-views/control-view-creator/Sidebar/FolderContextMenu.qml</file>
+        <file alias="Sidebar/NewFilePopup.qml">partial-views/control-view-creator/Sidebar/NewFilePopup.qml</file>
         <file alias="ConfirmClosePopup.qml">partial-views/control-view-creator/ConfirmClosePopup.qml</file>
         <file alias="utils/template_selection.js">partial-views/control-view-creator/utils/template_selection.js</file>
         <file alias="Console/ConsoleLogger.qml">partial-views/control-view-creator/Console/ConsoleLogger.qml</file>
